<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".LoginActivity">

   <TextView
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:text="@string/login"
       android:textColor="@color/textBlack"
       android:layout_marginTop="70dp"
       android:layout_marginBottom="20dp"
       android:layout_marginLeft="@dimen/margin_side"
       android:textSize="@dimen/heading_4"/>

   <android.support.design.widget.TextInputLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_marginTop="10dp"
       android:layout_marginBottom="10dp">
      <EditText
          android:id="@+id/et_email_login"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginLeft="@dimen/margin_side"
          android:layout_marginRight="@dimen/margin_side"
          android:hint="@string/email"
          android:defaultFocusHighlightEnabled="false"/>
   </android.support.design.widget.TextInputLayout>

   <android.support.design.widget.TextInputLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_marginTop="10dp"
       android:layout_marginBottom="10dp"
       app:passwordToggleEnabled="true">
      <EditText
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginLeft="@dimen/margin_side"
          android:layout_marginRight="@dimen/margin_side"
          android:inputType="textPassword"
          android:hint="@string/password"
          />
   </android.support.design.widget.TextInputLayout>


</LinearLayout>