<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:scrollbars="vertical"
    tools:context=".HomeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="185dp"
        android:orientation="vertical"
        android:background="@drawable/corner_radius_header_home">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:layout_marginTop="35dp"
            android:fontFamily="@font/baloo_tammudu"
            android:text="@string/alushelp"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@android:color/white"
            android:textSize="@dimen/heading_3" />
        <TextView
            android:id="@+id/tv_haridantanggal_main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/noto_san"
            android:text="@string/contoh_hari_tanggal"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="@dimen/body_2"/>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginLeft="@dimen/margin_side"
        android:layout_marginRight="@dimen/margin_side"
        android:layout_marginBottom="10dp"
        android:fontFamily="@font/noto_san"
        android:text="@string/beranda_header_1"
        android:textColor="@color/textBlack"
        android:textSize="@dimen/subtitle_1"
        android:textStyle="bold"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginLeft="@dimen/margin_side"
        android:layout_marginRight="@dimen/margin_side">

        <android.support.v7.widget.CardView
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:id="@+id/cv_fitur_setrika"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_marginStart="@dimen/margin_side"
            android:foreground="?attr/selectableItemBackground"
            card_view:cardCornerRadius="8dp"
            android:layout_centerVertical="true"
            android:clickable="true"
            android:focusable="true">
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <ImageView
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:src="@drawable/ic_iron"
                    android:layout_centerInParent="true"
                    android:clickable="true"
                    android:focusable="true"
                    android:scaleType="fitXY"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/setrika"
                    android:gravity="center_horizontal|bottom"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp"/>
            </RelativeLayout>
        </android.support.v7.widget.CardView>
        <android.support.v7.widget.CardView
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:id="@+id/cv_fitur_cleaning"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:foreground="?attr/selectableItemBackground"
            card_view:cardCornerRadius="8dp"
            android:layout_centerInParent="true"
            android:clickable="true"
            android:focusable="true">
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <ImageView
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:src="@drawable/ic_house"
                    android:layout_centerInParent="true"
                    android:clickable="true"
                    android:focusable="true"
                    android:scaleType="fitXY"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_horizontal|bottom"
                    android:text="@string/cleaning"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp" />
            </RelativeLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:id="@+id/cv_fitur_kustom"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_marginEnd="@dimen/margin_side"
            android:foreground="?attr/selectableItemBackground"
            card_view:cardCornerRadius="8dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:clickable="true"
            android:focusable="true">
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:src="@drawable/ic_kustom"
                android:layout_centerInParent="true"
                android:clickable="true"
                android:focusable="true"
                android:scaleType="fitXY"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/kustom"
                android:gravity="center_horizontal|bottom"
                android:paddingBottom="5dp"/>
        </RelativeLayout>
    </android.support.v7.widget.CardView>

    </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="@dimen/margin_side"
        android:layout_marginRight="@dimen/margin_side"
        android:layout_marginBottom="10dp"
        android:fontFamily="@font/noto_san"
        android:text="@string/beranda_header_2"
        android:textColor="@color/textBlack"
        android:textSize="@dimen/subtitle_1"
        android:textStyle="bold"/>

    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/cv_promo"
        android:layout_width="250dp"
        android:layout_height="100dp"
        android:layout_marginLeft="@dimen/margin_side"
        android:layout_marginRight="@dimen/margin_side"
        card_view:cardCornerRadius="10dp"
        android:foreground="?attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        card_view:cardElevation="8dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/rabu_ceria"
                android:gravity="center"
                android:paddingBottom="5dp"/>
    </android.support.v7.widget.CardView>


</LinearLayout>